# consumptionbackend

./: README.md  pyproject.toml
.github/workflows/: on-pull-reqeust.yml
src/consumptionbackend/: Consumable.py  Database.py  Personnel.py  Series.py  Status.py  __init__.py  config_handling.py  path_handling.py  setup_script.py  update_script.py
tests/: ConsumablesTest.py  ConsumablesTests.py  DatabaseTests.py  PersonnelTests.py  SeriesTests.py  StaffTest.py  test_consumable.py  test_personnel.py  test_series.py
