[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/tests"
]

[project]
name = "consumptionbackend"
version = "2.1.0"
authors = [
  { name="track-44", email="trackfortyfour@proton.me" },
]
description = "The backend SQLite3 database manager for the ConsumptionCLI tool."
readme = "README.md"
license-files = { paths = ["LICENSE"] }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: SQL",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/track-44/consumptionbackend"
"Bug Tracker" = "https://github.com/track-44/consumptionbackend/issues"